# TFG

./: CMakeLists.txt  GoFa.yml  IRB1200.yml  Module1.mod  input_parameters_1.1_GoFa.yml  input_parameters_1.2_GoFa.yml  input_parameters_1_IRB1200.yml  input_parameters_2_IRB1200.yml  input_parameters_3_GoFa.yml  input_parameters_3_IRB1200.yml  input_parameters_4_IRB1200.yml
include/: functions.h  parser.h  trajectory_generator.h
src/: execute.cpp  generate.cpp  main.cpp  parser.cpp  plot.cpp  plot_joints.cpp  solveIK.cpp  trajectory_generator.cpp
